--- a/bower.json
+++ b/bower.json
@@ -13,10 +13,9 @@
         "bus",
         "publish",
         "subscribe",
-        "event"
+        "events"
     ],
     "license": "MIT",
-    "private": true,
     "ignore": [
         "**/.*",
         "node_modules",
